get2gnow 00.00.DB.aFB - improved avatar management & initial caching implemented.
I've completely refactored how get2gnow manages & downloads avatars.  It know supports multiple accounts much better, I've also implemented my initial caching system.  I have it cleaning up old avatar's when a user changes their avatar.  Of course my code does much more than just that though its all I'm using it for at this moment.  My code actually allows recursive clean-up & removal of any caching files & directories.  I've also extended OnlineServices to support separating servers & request urls.  I'm using this for avatar caching purposes right now but I'll be using it for a lot more.

While refactoring my image & avatar management I've fixed several bugs which I haven't experienced yet but ones I'm sure would have eventually.  Mostly I've laid a lot of ground work & wrote a lot of architecure code for my caching system.  Tomorrow I'll hopefully get to work on using it to save friends & followers.  Assuming no further health issues nor crashes, of a physical nature of course.  Any get2gnow has...well at least I can fix those.

Committed on: 2009-05-20 @ 10:54:04 PM

--- a/data/tweet-view.ui
+++ b/data/tweet-view.ui
@@ -302,6 +302,35 @@
                         <property name="position">3</property>
                       </packing>
                     </child>
+                    <child>
+                      <object class="GtkVSeparator" id="sexy_vseparator">
+                        <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">4</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="new_tweet_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <child>
+                          <object class="GtkImage" id="image1">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-clear</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">5</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
