get2gnow 00.00.DB.aFC - account manager now segfault free... and more.
I'm still working on get2gnow's caching system.  But while working on it tonight I ran into several bugs w/get2gnow's account manager & some other stuff that just wasn't working correctly.  These are all now fixed.  I still need to implement account deletion but other wise every works great. You can now add any & all accounts you want, just make sure to click 'save' between adding each account.  Clicking 'Ok' will also save your account if you're just adding one.  Than from get2gnow's main menus. Click 'Accounts', if 'Disconnect' is highlighted click that 1st, lastly click 'Accounts'->'Connect' & you'll be using all of your accounts.

I will be adding a 'Reconnect' menu option to make this more intuitive, but I'm still working parts of the icky UI I inherited when I began creating get2gnow.

I have got more of my caching system in place & DMs are working, though its very slow & get2gnow has to load your friends list every time you start get2gnow.

Now I'm off to bed, hopefully tomorrow I'll make better progress w/get2gnow's caching & especially w/finding some new care takers.  I'm killing my self trying to just take care of my basic needs & I'm not getting near enough done.  I hate needing care taker's, but w/o any doubt I know I have a truly blessed & gifted life.  Its not any 'faith' that makes me know & feel this is truth.  LOL I could prolly even write a logic proof.  So despite my oft whining & complaining - its just to 'let it out'.  I know, and am, gratefule for so much.

Committed on: 2009-05-23 @ 04:51:43 AM

--- a/data/services-dialog.ui
+++ b/data/services-dialog.ui
@@ -221,8 +221,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="apply_button">
-                <property name="label" translatable="yes">gtk-apply</property>
+              <object class="GtkButton" id="save_button">
+                <property name="label" translatable="yes">gtk-save</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -246,7 +246,7 @@
     <action-widgets>
       <action-widget response="-6">cancelbutton1</action-widget>
       <action-widget response="-5">okbutton1</action-widget>
-      <action-widget response="0">apply_button</action-widget>
+      <action-widget response="0">save_button</action-widget>
     </action-widgets>
   </object>
   <object class="GtkListStore" id="urls_liststore">
